Closed Bug 232071 Opened 22 years ago Closed 22 years ago

Windows uninstaller cosmetic bug, \n is not escaped in folder name

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 2000
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.7beta

People

(Reporter: amonroe, Assigned: benjamin)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6) Gecko/20040113 Dialog box reads: "Not all files were uninstalled from the installation directory: C:<newline> et\Mozilla" when it should read: "Not all files were uninstalled from the installation directory: c:\net\Mozilla" Reproducible: Always Steps to Reproduce: Uninstall Mozilla from Add/Remove Programs control panel. Actual Results: The backslash-n turned into a newline. Expected Results: The backslash-n should remain part of the folder name.
This is caused by http://lxr.mozilla.org/mozilla/source/xpinstall/wizard/windows/uninstall/extra.c#1888 We should switch the calls to _snprintf and ReplacePrivateProfileStrCR. Patch forthcoming.
Assignee: general → bsmedberg
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #139991 - Flags: superreview?(bugs)
Attachment #139991 - Flags: review?(bugs)
Comment on attachment 139991 [details] [diff] [review] Switch _snprintf and ReplacePrivateProfileStrCR r/sr=ben@mozilla.org
Attachment #139991 - Flags: superreview?(bugs)
Attachment #139991 - Flags: superreview+
Attachment #139991 - Flags: review?(bugs)
Attachment #139991 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.7beta
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: