Bug 232071 - windows uninstaller cosmetic bug (unescaped \n)... r+sr=bengoodger